--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="app_red">#FD3A69</color>
+    <color name="app_light_grey">#F0F0F0</color>
+    <color name="app_dark_grey">#7B7B7B</color>
+
 </resources>
