Category output has been implemented

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,12 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="app_red">#FD3A69</color>
+    <color name="app_light_red">#33FD3A69</color>
+
     <color name="app_white">#FBFBFB</color>
+
     <color name="app_light_grey">#F0F0F0</color>
+    <color name="app_grey">#C3C4C9</color>
     <color name="app_dark_grey">#7B7B7B</color>
 
 </resources>
