--- a/app/src/main/res/drawable/background_button_outline.xml
+++ b/app/src/main/res/drawable/background_button_outline.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#4DFFFFFF" android:effectColor="#4DFFFFFF">
+    android:color="@color/app_light_red" android:effectColor="@color/app_light_red">
     <item>
         <shape android:shape="rectangle">
 
             <corners android:radius="6dp"/>
+            <solid android:color="@color/app_white"/>
             <stroke android:color="@color/app_red" android:width="1dp"/>
 
 
