--- a/app/src/main/res/xml/fragment_food_menu_scene.xml
+++ b/app/src/main/res/xml/fragment_food_menu_scene.xml
@@ -27,11 +27,10 @@
         <Constraint
             android:id="@+id/rv_banner"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             motion:layout_constraintTop_toBottomOf="@+id/linearLayout"
             motion:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp"
-            android:scaleY="0" />
+            android:layout_marginTop="0dp" />
     </ConstraintSet>
 </MotionScene>
