--- a/app/src/main/res/layout/fragment_food_menu.xml
+++ b/app/src/main/res/layout/fragment_food_menu.xml
@@ -115,6 +115,14 @@
             tools:listitem="@layout/item_food"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
 
+        <ProgressBar
+            android:id="@+id/pb_loader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/app_red"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            app:layout_anchorGravity="center"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
