--- a/app/src/main/res/layout/fragment_food_menu.xml
+++ b/app/src/main/res/layout/fragment_food_menu.xml
@@ -120,9 +120,45 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateTint="@color/app_red"
-            android:visibility="gone"
             android:layout_gravity="center"
             app:layout_anchorGravity="center"/>
+
+        <LinearLayout
+            android:id="@+id/layout_error"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:visibility="gone"
+            app:layout_anchorGravity="center">
+
+
+            <TextView
+                android:id="@+id/tv_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/inter_medium"
+                tools:text="Москва"
+                android:textColor="@color/app_grey"
+                android:textSize="16sp" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="12dp"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_error"
+                android:layout_width="wrap_content"
+                android:layout_height="42dp"
+                android:textColor="@color/app_red"
+                android:textSize="14sp"
+                android:paddingHorizontal="8dp"
+                android:fontFamily="@font/inter_regular"
+                android:background="@drawable/background_button_outline"
+                android:text="Загрузить снова"/>
+
+        </LinearLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
